--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ attrs==22.2.0
 azure-common==1.1.28
 azure-core==1.26.3
 azure-functions==1.13.2
-azure-search-documents==11.3.0
+azure-search-documents==11.4.0b3
 certifi==2022.12.7
 charset-normalizer==3.0.1
 frozenlist==1.3.3
